--- a/General-Store-App/test-output/index.html
+++ b/General-Store-App/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\royal\AppData\Local\Temp\testng-eclipse-1599953339\testng-customsuite.xml</span>
+                    <span>C:\Users\royal\AppData\Local\Temp\testng-eclipse-37512077\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,6 +104,11 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="testFiles.FormDetailsModule" class="method navigator-link" hash-for-method="FillForm">FillForm</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="testFiles.FormDetailsModule" class="method navigator-link" hash-for-method="ToastErrorValidation">ToastErrorValidation</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -131,12 +136,19 @@
                   <span class="method-name">FillForm</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="ToastErrorValidation">
+                  </a> <!-- ToastErrorValidation -->
+                  <span class="method-name">ToastErrorValidation</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\royal\AppData\Local\Temp\testng-eclipse-1599953339\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\royal\AppData\Local\Temp\testng-eclipse-37512077\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -185,16 +197,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'FillForm')
 data.setCell(0, 2, 'testFiles.FormDetailsModule')
-data.setCell(0, 3, 32220);
+data.setCell(0, 3, 34677);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'ToastErrorValidation')
+data.setCell(1, 2, 'testFiles.FormDetailsModule')
+data.setCell(1, 3, 1718);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 32 seconds</span>
+              <span class="suite-total-time">Total running time: 36 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -222,16 +238,20 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">testFiles.FormDetailsModule</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">ConfigureAppium</span>
+                <span class="method-name">configureAppium</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
+                <span class="method-name">ToastErrorValidation</span>
+                <span class="method-start">14679 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
                 <span class="method-name">FillForm</span>
-                <span class="method-start">13661 ms</span>
+                <span class="method-start">16402 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">45883 ms</span>
+                <span class="method-start">51081 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
